[package]
name = "execves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "execves"
path = "src/bin/main.rs"

[dependencies]
nix = { version = "^0.27", features = ["process"] }
serde = { version = "^1", features = ["serde_derive", "derive"] }
serde_yaml = "0.9.25"
