[package]
edition = "2021"
name = "execves"
version = "0.1.0"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true

[[bin]]
name = "execves"
path = "src/bin/main.rs"

[dependencies]
nix = { version = "^0.27", features = ["process"] }
serde = { version = "^1", features = ["serde_derive", "derive"] }
serde_yaml = "0.9.25"
